unify form template

--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,6 +1,6 @@
 <app-home-button></app-home-button>
 
 <div class="alert alert-info text-center">
-  <h5>Add new job entry</h5>
+  <h5>Edit job entry</h5>
 </div>
-<app-job-form></app-job-form>
+<app-job-form [jobId]="jobId"></app-job-form>
