--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,8 @@
-.navbar {
+/* .navbar {
     border: 1px solid;
-}
+} */
 
 .content {
     margin: 20px 50px 50px 50px;
-    border: 1px solid;
+    /* border: 1px solid; */
 }
