--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,11 @@
 <main>
-  <nav class="navbar">
+  <!-- <nav class="navbar sticky-top bg-dark">
     <a class="navbar-brand mx-auto" [routerLink]="['/']">
-      <h1>{{ title }}</h1>
+      <h5>{{ title }}</h5>
     </a>
-  </nav>
+  </nav> -->
   <section class="content">
     <router-outlet></router-outlet>
-    <!-- <app-home></app-home> -->
   </section>
 </main>
 
