--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,30 @@
 <section>
-  <form>
+  <form [formGroup]="filterForm">
     <div class="row">
-      <div class="col-4">
-          <input class="form-control" type="text" placeholder="filter" #filter />
-      </div>
-        
-      <div class="col-2">
-        <select class="form-control">
-          <option>All Statuses</option>
-          <option>Applied</option>
-          <option>Rejected</option>
-        </select>
+      <div class="col-3">
+          <input class="form-control" type="text" formControlName="text" placeholder="Search company or title">
       </div>
 
       <div class="col-2">
-        <select class="form-control">
-          <option>All time</option>
-          <option>Last 30 days</option>
-          <option>Last 60 days</option>
+        <select class="form-control" formControlName="time">
+          <option *ngFor="let tf of timeFilters" [ngValue]="tf">{{ tf.name }}</option>
         </select>
       </div>
 
-      <div class="col-4 d-flex justify-content-end">
+      <div class="col-6">
+        <div class="btn-group" role="group">
+          <ng-container *ngFor="let sf of statusFilters">
+            <input type="checkbox" class="btn-check" id="status-{{ sf.id }}" formControlName="{{ sf.name.toLowerCase() }}">
+            <label for="status-{{ sf.id }}" class="btn btn-outline-secondary" >{{ sf.name }}</label>
+          </ng-container>
+        </div>
+      </div>
+
+      <div class="col-1 d-flex justify-content-end">
         <a routerLink="/create">
-          <button class="btn btn-success" type="button">+</button>
+          <button class="btn btn-success" type="button">
+            <i class="bi bi-plus-lg"></i>
+          </button>
         </a>
       </div>
     </div>
@@ -32,20 +33,32 @@
 
 <section class="results">
   <table class="table table-hover">
-    <thead>
+    <thead class="sticky-top">
       <tr>
         <th scope="col">Company</th>
         <th scope="col">Title</th>
         <th scope="col">Status</th>
         <th scope="col">Date</th>
+        <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let job of filteredJobList">
-        <td>{{ job.company }}</td>
-        <td><a [routerLink]="['/details', job.id]">{{ job.title }}</a></td>
+        <td [routerLink]="['/details', job.id]">{{ job.company }}</td>
+        <td [routerLink]="['/details', job.id]">{{ job.title }}</td>
         <td>{{ job.status }}</td>
         <td>{{ job.updated }}</td>
+        <td>
+          <button type="button" class="btn btn-outline-info btn-sm" [routerLink]="['/details', job.id]">
+            <i class="bi bi-justify-left"></i>
+          </button>
+          <button type="button" class="btn btn-outline-primary btn-sm" [routerLink]="['/edit', job.id]">
+            <i class="bi bi-pencil"></i>
+          </button>
+          <button type="button" class="btn btn-outline-danger btn-sm" [routerLink]="['/delete', job.id]">
+            <i class="bi bi-x-lg"></i>
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
